--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,18 @@ pyyaml==6.0.1
 chromadb==0.4.18
 
 # LLM and AI
-openai==1.3.7
+openai>=1.6.1,<2.0.0
 langchain==0.1.0
 langchain-openai==0.0.2
 sentence-transformers==2.2.2
+huggingface_hub==0.14.1
+transformers==4.29.2
+tokenizers==0.13.3
 
 # Data processing
 pandas==2.1.4
 numpy==1.24.3
+plotly
 
 # Web framework
 streamlit==1.29.0
